
lib_LTLIBRARIES=libntrace.la

# Versioning CURRENT:REVISION:AGE
libntrace_la_LDFLAGS=-version-info 4:1:3
	
libntrace_la_SOURCES=\
  ntrace/function.cpp ntrace/manager.cpp ntrace/module.cpp


include_HEADERS=\
  ntrace.h 

nobase_include_HEADERS=\
  ntrace/function.h ntrace/manager.h ntrace/module.h 
